--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,6 +7,8 @@ permissions:
 jobs:
   release:
     runs-on: ubuntu-latest
+    env:
+      BURP_SUITE_PATH: /tmp/burpsuite.jar
     steps:
       - uses: actions/checkout@v4.2.2
       - uses: actions/setup-java@v4.5.0
@@ -15,10 +17,9 @@ jobs:
           distribution: oracle
       - run: |
           curl -fsSL -o /tmp/burpsuite.jar https://portswigger-cdn.net/burp/releases/download?product=community&version=2024.10.1&type=Jar
-      - run: |
-          ./gradlew shadowJar
-        env:
-          BURP_SUITE_PATH: /tmp/burpsuite.jar
+      - run: gradle wrapper --gradle-version 8.10.1 --distribution-type all
+      - run: ./gradlew --version
+      - run: ./gradlew shadowJar
       - run: |
           version=$(grep archiveVersion build.gradle.kts | grep -oE '"[^"]*"' | tr -d '"')
           file_name="SpoofProof-$version.jar"
